# polyfem

./: .appveyor.yml  .clang-format  .clang-format-ignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  CONTEXT.md  Dockerfile  Dockerfile-cuda  Dockerfile.cuda  Doxyfile  FLIP.json  Laplacian.json  NavierStokes.json  OperatorSplitting.json  PolyFEMOptions.cmake.sample  README.md  TODO.md  _a_l_form_8cpp.html  _a_l_form_8cpp__incl.map  _a_l_form_8cpp__incl.md5  _a_l_form_8cpp_source.html  _a_l_form_8hpp.html  _a_l_form_8hpp.js  _a_l_form_8hpp__dep__incl.map  _a_l_form_8hpp__dep__incl.md5  _a_l_form_8hpp__incl.map  _a_l_form_8hpp__incl.md5  _a_l_form_8hpp_source.html  _a_l_n_l_problem_8cpp.html  _a_l_n_l_problem_8cpp__incl.map  _a_l_n_l_problem_8cpp__incl.md5  _a_l_n_l_problem_8cpp_source.html  _a_l_n_l_problem_8hpp.html  _a_l_n_l_problem_8hpp.js  _a_l_n_l_problem_8hpp__dep__incl.map  _a_l_n_l_problem_8hpp__dep__incl.md5  _a_l_n_l_problem_8hpp__incl.map  (+17961 more)
app/: CMakeLists.txt  app.cpp  imgui.cmake  sdl.cmake  tinyfd.cmake
app/resources/: Info.plist  appicon.rc  ico.icns
cpp/: CMakeLists.txt  compile.sh  example.json  polyFEM.sublime-project
cpp/apps/: CMakeLists.txt  b_extractor.cpp  bc_setter.cpp  extrude_mesh.cpp  square_beam.cpp  tetrahedralize.cpp  tetrahedralize_hybrid.cpp
cpp/cmake/: FindLIBIGL.cmake  FindMKL.cmake  FindOpenCL.cmake  FindPardiso.cmake  PolyfemDependencies.cmake  PolyfemDownloadExternal.cmake  PolyfemUtils.cmake  PrependCurrentPath.cmake  SetWarnings.cmake  UseColors.cmake  Warnings.cmake  geogram.cmake  hypre.cmake  rbf.cmake
cpp/misc/: CMakeLists.txt  b_extractor.cpp  bc_setter.cpp  dmat_to_geogram.cpp  extract_polyhedra.cpp  extrude_mesh.cpp  navigation_test.cpp  param.cpp  refinement_test.cpp  solver_test.cpp  square_beam.cpp  svg_to_mesh.cpp  tetrahedralize_hybrid.cpp
cpp/src/: CMakeLists.txt  Common.hpp  State.cpp  State.hpp  UIState.cpp  UIState.hpp  main.cpp  main_no_gui.cpp
cpp/tests/: CMakeLists.txt  extract_polyhedra.cpp  main.cpp  mesh2d_2_mesh3d.cpp  navigation.cpp  navigation.hpp  navigation_test.cpp  refinement_test.cpp  solver_test.cpp  solver_test.py  sphere.ply  test_bases.cpp  test_foo.cpp  test_matrix.cpp  test_navigation.cpp  test_problem.cpp  test_quadrature.cpp  test_solver.cpp  test_tbb.cpp  test_utils.cpp  tetrahedralize.cpp  tetrahedralize_hybrid.cpp
easy_wrapper/: CMakeLists.txt  README.md  easy_polyfem.cpp
easy_wrapper/src/: cli.cpp  json_writer.cpp  main.cpp  mesh_info.cpp  runner.cpp  validator.cpp
src/: CMakeLists.txt  Common.hpp  State.cpp  State.hpp  main.cpp
src/assembler/: Assembler.cpp  Assembler.hpp  AssemblerUtils.cpp  AssemblerUtils.hpp  AssemblyValsCache.cpp  AssemblyValsCache.hpp  AssemblyValues.hpp  Bilaplacian.cpp  Bilaplacian.hpp  CMakeLists.txt  ElementAssemblyValues.cpp  ElementAssemblyValues.hpp  Helmholtz.cpp  Helmholtz.hpp  HookeLinearElasticity.cpp  HookeLinearElasticity.hpp  IncompressibleLinElast.cpp  IncompressibleLinElast.hpp  Laplacian.cpp  Laplacian.hpp  LinearElasticity.cpp  LinearElasticity.hpp  MassMatrixAssembler.cpp  MassMatrixAssembler.hpp  MultiModel.cpp  MultiModel.hpp  NavierStokes.cpp  NavierStokes.hpp  NeoHookeanElasticity.cpp  NeoHookeanElasticity.hpp  OgdenElasticity.cpp  OgdenElasticity.hpp  RhsAssembler.cpp  RhsAssembler.hpp  SaintVenantElasticity.cpp  SaintVenantElasticity.hpp  Stokes.cpp  Stokes.hpp
src/autogen/: CMakeLists.txt  auto_eigs.cpp  auto_eigs.hpp  auto_p_bases.cpp  auto_p_bases.hpp  auto_q_bases.cpp  auto_q_bases.hpp  auto_tetrahedron.ipp  auto_triangle.ipp  eigs.py  elasticity_rhs.py  p_bases.py  q_bases.py
src/basis/: Basis.cpp  Basis.hpp  ElementBases.cpp  ElementBases.hpp  FEBasis2d.cpp  FEBasis2d.hpp  FEBasis3d.cpp  FEBasis3d.hpp  InterfaceData.hpp  MVPolygonalBasis2d.cpp  MVPolygonalBasis2d.hpp  PolygonalBasis2d.cpp  PolygonalBasis2d.hpp  PolygonalBasis3d.cpp  PolygonalBasis3d.hpp  SpectralBasis2d.cpp  SpectralBasis2d.hpp  SplineBasis2d.cpp  SplineBasis2d.hpp  SplineBasis3d.cpp  SplineBasis3d.hpp
src/mesh/: CMakeLists.txt  LocalBoundary.hpp  Mesh.cpp  Mesh.hpp  MeshNodes.cpp  MeshNodes.hpp  MeshUtils.cpp  MeshUtils.hpp  MeshesJSON.cpp  MeshesJSON.hpp  Obstacle.cpp  Obstacle.hpp  VTUWriter.cpp  VTUWriter.hpp  ncMesh.cpp  ncMesh.hpp
src/mesh2D/: CMakeLists.txt  CMesh2D.cpp  CMesh2D.hpp  Mesh2D.cpp  Mesh2D.hpp  MeshUtils.cpp  MeshUtils.hpp  NCMesh2D.cpp  NCMesh2D.hpp  Navigation.cpp  Navigation.hpp  PolygonUtils.cpp  PolygonUtils.hpp  Refinement.cpp  Refinement.hpp  Singularities.cpp  Singularities.hpp  ncMesh2D.cpp  ncMesh2D.hpp
src/mesh3D/: CMakeLists.txt  CMesh3D.cpp  CMesh3D.hpp  Mesh3D.cpp  Mesh3D.hpp  Mesh3DStorage.hpp  MeshProcessing3D.cpp  MeshProcessing3D.hpp  NCMesh3D.cpp  NCMesh3D.hpp  Navigation3D.cpp  Navigation3D.hpp  ncMesh3D.cpp  ncMesh3D.hpp
src/polyfem/: CMakeLists.txt  Common.hpp  OptState.cpp  OptState.hpp  State.cpp  State.hpp  Units.cpp  Units.hpp  homo.cpp  main.cpp  main_homo.cpp  main_homogenization.cpp  main_optimization.cpp  main_shape_opt.cpp  main_splineopt.cpp  main_stressopt.cpp  main_top_opt.cpp  main_trajectory_opt.cpp
src/problem/: CMakeLists.txt  ElasticProblem.cpp  ElasticProblem.hpp  FrankeProblem.cpp  FrankeProblem.hpp  GenericProblem.cpp  GenericProblem.hpp  KernelProblem.cpp  KernelProblem.hpp  MiscProblem.cpp  MiscProblem.hpp  (+12 more)
tests/: CMakeLists.txt  VarFormTestAccess.hpp  adhesion.txt  contact_2d.txt  contact_3d.txt  main.cpp  old_tolerances.txt  polyspline_test_list.txt  pref_test_list.txt  selection.txt  standard.txt  system_test_list.txt  test_assembler.cpp  test_bases.cpp  test_clipping.cpp  test_cmesh.cpp  test_collision_proxy.cpp  test_diff.cpp  test_form_derivatives.cpp  test_form_values.cpp  test_forms.cpp  test_full_run.cpp  test_geometry_utils.cpp  test_hdf5.cpp  test_homo.cpp  test_inflator.cpp  test_interpolation.cpp  test_jacobian.cpp  test_matrix.cpp  test_ncmesh.cpp  test_normal.cpp  test_obstacle.cpp  test_opt.cpp  test_output.cpp  test_parametrizations.cpp  test_periodic.cpp  test_problem.cpp  test_quadrature.cpp  test_rbf.cpp  test_restart.cpp  (+9 more)
(+2102 files in other folders)
